docs(hilmir): document controlPlane/fafnir/muninn/andvari/agents/jvm
Add schema tables for the six previously-undocumented topology
blocks, and note upgrade-cluster has no rollback verb of its own.